<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    tools:context=".presentation.tutorial_page.TutorialActivity">

    <TextView
        android:id="@+id/tutorial_name"
        style="@style/MyTextView"
        android:layout_width="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/screen_margin"
        android:fontFamily="@font/quicksand_bold"
        android:gravity="center"
        android:text="@string/app_name"
        android:textAppearance="@style/TextAppearance.Material3.TitleLarge"
        android:textColor="@color/textColor"
        android:textStyle="bold" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/tutorial_check"
        android:layout_below="@id/tutorial_name"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/screen_margin_small"
        android:layout_marginBottom="@dimen/screen_margin_small"
        android:paddingStart="@dimen/screen_margin"
        android:paddingEnd="@dimen/screen_margin">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/quicksand_medium"
                android:gravity="start"
                android:text="@string/application_tutorial_1"
                android:textAppearance="@style/TextAppearance.Material3.BodyMedium"
                android:textColor="@color/textColor" />

            <TextView
                style="@style/MyTextView"
                android:layout_width="wrap_content"
                android:layout_marginTop="@dimen/screen_margin"
                android:fontFamily="@font/quicksand_bold"
                android:gravity="center"
                android:text="@string/key_features"
                android:textAppearance="@style/TextAppearance.Material3.TitleMedium"
                android:textColor="@color/textColor"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/screen_margin_small"
                android:fontFamily="@font/quicksand_medium"
                android:gravity="start"
                android:text="@string/key_features_1"
                android:textAppearance="@style/TextAppearance.Material3.BodyMedium"
                android:textColor="@color/textColor" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/screen_margin_small"
                android:fontFamily="@font/quicksand_medium"
                android:gravity="start"
                android:text="@string/key_features_2"
                android:textAppearance="@style/TextAppearance.Material3.BodyMedium"
                android:textColor="@color/textColor" />

        </LinearLayout>

    </ScrollView>


    <com.google.android.material.checkbox.MaterialCheckBox
        android:id="@+id/tutorial_check"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/tutorial_button"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="12dp"
        android:fontFamily="@font/quicksand_medium"
        android:text="@string/dont_want_to_see_again"
        android:textColor="@color/textColor"
        app:buttonTint="@color/primary" />

    <Button
        android:id="@+id/tutorial_button"
        style="@style/MyMaterialButtonFilled"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:text="@string/understand" />


</RelativeLayout>