<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    tools:context=".presentation.main.settings.activities.AboutAppActivity">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/activity_about_app_toolbar"
        style="@style/MyTopAppBar"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:navigationIcon="@drawable/ic_back"
        app:title="@string/app_name" />

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/application_icon"
        style="@style/MyShapeableImageView.Application"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_below="@id/activity_about_app_toolbar"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/screen_margin"
        android:src="@mipmap/ic_launcher" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/application_icon"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/screen_margin"
        android:paddingStart="@dimen/screen_margin"
        android:paddingEnd="@dimen/screen_margin">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/quicksand_medium"
                android:gravity="start"
                android:text="@string/application_tutorial_1"
                android:textAppearance="@style/TextAppearance.Material3.BodyMedium"
                android:textColor="@color/textColor" />

            <TextView
                style="@style/MyTextView"
                android:layout_width="wrap_content"
                android:layout_marginTop="@dimen/screen_margin"
                android:fontFamily="@font/quicksand_bold"
                android:gravity="center"
                android:text="@string/key_features"
                android:textAppearance="@style/TextAppearance.Material3.TitleMedium"
                android:textColor="@color/textColor"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/screen_margin_small"
                android:fontFamily="@font/quicksand_medium"
                android:gravity="start"
                android:text="@string/key_features_1"
                android:textAppearance="@style/TextAppearance.Material3.BodyMedium"
                android:textColor="@color/textColor" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/screen_margin_small"
                android:fontFamily="@font/quicksand_medium"
                android:gravity="start"
                android:text="@string/key_features_2"
                android:textAppearance="@style/TextAppearance.Material3.BodyMedium"
                android:textColor="@color/textColor" />

        </LinearLayout>

    </ScrollView>


</RelativeLayout>